[tool.poetry]
name = "recursos-hidricos"
version = "0.1.0"
description = ""
authors = ["mateu <mateus.vidotti@idgeo.com.br>"]
readme = "README.md"
packages = [{include = "recursos_hidricos"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
